tests/baselines/reference/decoratorOnEnum.errors.txt
tests/cases/conformance/decorators/invalid/decoratorOnEnum.ts(4,6): error TS1202: Decorators are not valid on this declaration type.


==== tests/cases/conformance/decorators/invalid/decoratorOnEnum.ts (1 errors) ====
    declare function dec<T>(target: T): T;
    
    @dec
    enum E {
         ~
!!! error TS1202: Decorators are not valid on this declaration type.
    }